--- a/Trabalho_Supervised_learning/SML_FinalCaseStudy_Group4.ipynb
+++ b/Trabalho_Supervised_learning/SML_FinalCaseStudy_Group4.ipynb
@@ -2106,7 +2106,8 @@
     "    'Ridge Regression': Ridge(),\n",
     "    'Lasso Regression': Lasso(),\n",
     "    'Decision Tree': DecisionTreeRegressor(),\n",
-    "    'Random Forest': RandomForestRegressor()\n",
+    "    'Random Forest': RandomForestRegressor(),\n",
+    "    'GaussianNB': GaussianNB()\n",
     "   # 'Gradient Boosting': GradientBoostingRegressor()\n",
     "}\n",
     "\n",
